--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,12 @@
 repository: Jaekeun-Lee/Jaekeun-Lee.github.io
 #favicon: images/favicon.ico
 
+# Content configuration version
+version: 2
+
 # Personal info
 name: 이재근
-title: Senior Network System Administrator
+title: Java & Backend Developer
 email: jacklee730@naver.com
 website: https://ljg960730.tistory.com
 
@@ -26,88 +29,66 @@ instagram_username: 96.glee
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
-# Additional icon links
-#additional_links:
-#- title: itsgoingto.be
-#  icon: fas fa-globe
-#  url: https://www.itsgoingto.be
-# - title: another link
-#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
-#   url: Link url (eg. https://google.com)
-
-# Google Analytics and Tag Manager
-# Using more than one of these may cause issues with reporting
-# gtm: "GTM-0000000"
-# gtag: "UA-00000000-0"
-# google_analytics: "UA-00000000-0"
-
 # About Section
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  열정적으로 도전하는 개발자 이재근입니다.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+
+  웹을 통해 사람을 연결하고 문제를 해결, 불편함을 개선하는 매력에 빠져 웹 개발의 길을 걷고 있습니다.
+  Java를 시작으로 사회와 코딩을 더욱 폭 넓게 경험하는 사회 새싹 주니어 개발자 입니다.
+  
+
+  <mark>#도전</mark>  <mark>#소통</mark>  <mark>#신뢰</mark>
+
 
 content:
-  - title: Projects # Title for the section
+  - title: Skill # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
-        # link_text: Project Website
+        quote: >
+          개발 과정 중 주로 사용했던 가장 익숙한 기술들 입니다.
+        description: | # this will include new lines to allow paragraphs
+          <h4 style="text-align:center">
+            <mark>Java</mark>  <mark>SpringMVC</mark>  <mark>Springboot</mark>  <mark>jsp</mark>  <mark>Oracle</mark>  
+          </h4>
+          <hr>
+      - layout: top-middle
         additional_links:
-          - title:  sproogen/modern-resume-theme
-            icon: fab fa-github
-            url: github.com/sproogen/modern-resume-theme
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+          - title: 보유기술 숙련도 기술 페이지
+            icon: fa fa-th-list
+            url: https://www.notion.so/b3417dfd21544aa7b9b7e2f7f585e360
         quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+          프로젝트 진행 중 경험했던 기술들 입니다.
+          <a href="https://www.notion.so/b3417dfd21544aa7b9b7e2f7f585e360" style="color:#000; font-style:normal;"> <br/> <span style="color:#ff4040">자세한 기술 숙련도</span>는 아이콘 또는 이 문장 클릭을 통해 확인 가능합니다! </a>            
+        
+      - layout: top-left
+        title: Backend
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
-
-  - title: Experience # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          * Java, Python, Php, NodeJS
+          * Spring Boot, Spring MVC, Spring Batch, Spring Security, Spring Data JPA
+          * JPA, Querydsl, Hibernate
+          * Junit4/5
+          * Gradle, Maven
+          * Eclipse, IntelliJ, Visual Studio Code
+      
+      - layout: top-left
+        title: Frontend
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+          * HTML5, CSS3
+          * Javascript(ES5, ES6), jQuery
+          * Vue.js
 
-  - title: Education # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
-        quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+      - layout: top-left
+        title: DevOps
         description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+          * Oracle, MySQL, MariaDB
+          * Jenkins, TravisCI, AWS Code Deploy
+          * RDS (MariaDB), S3, EC2
+          * Tomcat
 
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
-
-  - title: A Little More About Me
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
