--- a/_config.yml
+++ b/_config.yml
@@ -33,13 +33,14 @@ instagram_username: 96.glee
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  열정적으로 도전하는 개발자 이재근입니다.
 
+  열정은 '어떤 것을 수행함에 있어서 좋아하고 즐기며, 짜증나고 화나는 감정을 복합적으로 느낄 수 있는 행동을 꾸준히 하는 것'이라고 생각합니다.
+  저는 열정적으로 도전하는 개발자 이재근입니다.
 
   웹을 통해 사람을 연결하고 문제를 해결, 불편함을 개선하는 매력에 빠져 웹 개발의 길을 걷고 있습니다.
   Java를 시작으로 사회와 코딩을 더욱 폭 넓게 경험하는 사회 새싹 주니어 개발자 입니다.
   
-
+  
   <mark>#도전</mark>  <mark>#소통</mark>  <mark>#신뢰</mark>
 
 
@@ -52,7 +53,7 @@ content:
           개발 과정 중 주로 사용했던 가장 익숙한 기술들 입니다.
         description: | # this will include new lines to allow paragraphs
           <h4 style="text-align:center">
-            <mark>Java</mark>  <mark>SpringMVC</mark>  <mark>Springboot</mark>  <mark>jsp</mark>  <mark>Oracle</mark>  
+            <mark>Java</mark> <mark>SpringMVC</mark> <mark>Springboot</mark> <mark>jsp</mark> <mark>Mybatis</mark> <mark>Oracle</mark>  
           </h4>
           <hr>
       - layout: top-middle
@@ -67,25 +68,23 @@ content:
       - layout: top-left
         title: Backend
         description: | # this will include new lines to allow paragraphs
-          * Java, Python, Php, JSP, NodeJS
-          * Spring Boot, Spring MVC, Spring Batch, Spring Security, Spring Data JPA
-          * JPA, Querydsl, Hibernate
+          * Java, JSP
+          * Spring MVC, Spring Boot, Spring Security, Mybatis
           * Junit4/5
           * Gradle, Maven
-          * Thymeleaf, Mustache
           * Eclipse, IntelliJ, Visual Studio Code
       
       - layout: top-left
         title: Frontend
         description: | # this will include new lines to allow paragraphs
           * HTML5, CSS3
-          * Javascript(ES5, ES6)
-          * jQuery, Bootstrap, Vue.js
+          * Javascript
+          * jQuery, Bootstrap
 
       - layout: top-left
         title: DevOps
         description: | # this will include new lines to allow paragraphs
-          * Oracle, MySQL, MariaDB
+          * Oracle, MySQL
           * Jenkins, TravisCI, AWS Code Deploy
           * RDS (MariaDB), S3, EC2
           * Tomcat, Nginx
@@ -106,19 +105,19 @@ content:
       - layout: top-left
         title: Web Service
         caption: 2020.03
+        link: http://ec2-3-36-161-43.ap-northeast-2.compute.amazonaws.com:8080/
+        link_text: jw-webservicePractice.com
         additional_links:
           - title: jacklee-springboot-webservice
             icon: fab fa-github
             url: https://github.com/Jaekeun-Lee/jacklee-springboot-webservice
         quote: >
-          AWS EC2, RDS, ORM(JPA), CI/CD 학습 목적의 개인 프로젝트
+          Spring Boot 기반 CRUD 에디터 기능을 갖춘 웹 어플리케이션.
         description: | # this will include new lines to allow paragraphs
-          <mark>Java</mark> <mark>Springboot</mark> <mark>JPA</mark> <mark>MariaDB</mark> <mark>Gradle</mark> <mark>EC2</mark> <mark>RDS</mark> <mark>S3</mark> <mark>Travis</mark> <mark>SpringSecurity</mark> <mark>Mustache</mark> <mark>IntelliJ</mark> 
+          <mark>Java</mark> <mark>Springboot</mark> <mark>JPA</mark> <mark>MariaDB</mark> <mark>Gradle</mark> <mark>EC2</mark> <mark>RDS</mark> <mark>S3</mark> <mark>Travis</mark> <mark>SpringSecurity</mark> <mark>IntelliJ</mark> 
           
-          editing
-
-
-          ||
+          * AWS EC2, RDS, ORM(JPA), CI/CD 학습 목적의 개인 프로젝트
+          * editing
       
       - layout: top-left
         title: Baeum Project
@@ -132,9 +131,6 @@ content:
           
           editing
 
-
-          ||
-
       - layout: top-left
         title: M2MShop
         caption: 2020.09 - 2020.11
@@ -145,9 +141,6 @@ content:
           <mark>Java</mark> <mark>SpringMVC</mark> <mark>Mybatis</mark> <mark>Oracle11g</mark> <mark>JSP</mark> <mark>jQuery</mark> <mark>Eclipse</mark> 
 
           editing
-
-
-          ||
 
       - layout: top-left
         title: STAPL
@@ -172,9 +165,8 @@ content:
         description: | # this will include new lines to allow paragraphs
           디지털컨버전스 기반 Framework 전문 개발자 양성과정
           * Spring Framework 기반 웹 개발 학습
-          * OOP Base Cmd Mini Project
-          * FrameWork Base Smart Project
-          * UI/UX Base Web Project
+          * FrameWork Base Project (쇼핑몰, 매칭플랫폼 프로젝트 수행)
+          * 프로젝트 기획, 설계, 분석, 개발까지 웹 개발 사이클 경험, 동작 원리에 대한 이해
 
       - layout: left
         title: Konyang University
