프로젝트 내용 보충

--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,10 @@ content:
           <mark>Java</mark> <mark>Springboot</mark> <mark>JPA</mark> <mark>MariaDB</mark> <mark>Gradle</mark> <mark>EC2</mark> <mark>RDS</mark> <mark>S3</mark> <mark>Travis</mark> <mark>SpringSecurity</mark> <mark>IntelliJ</mark> 
           
           * AWS EC2, RDS, ORM(JPA), CI/CD 학습 목적의 개인 프로젝트
-          * editing
+          * SpringSecurity와 Oauth2로 SNS 로그인 기능 구현
+          * Travis CI, AWS S3, CodeDeploy를 활용한 CI/CD 경험
+          * TestCode 중요성, 서버 템플릿 엔진과 클라이언트 템플릿 엔진 차이 학습
+          * JPA Auditing, JDK 8 이전의 Date와 Calendar 클래스의 문제점, 그리고 개선된 LocalDate 학습
       
       - layout: top-left
         title: Baeum Project
@@ -128,8 +131,11 @@ content:
           S/W 개발자 매칭 플랫폼 서비스 구현
         description: | # this will include new lines to allow paragraphs
           <mark>Java</mark> <mark>Springboot</mark> <mark>Mybatis</mark> <mark>Oracle11g</mark> <mark>Gradle</mark> <mark>Thymeleaf</mark> <mark>SpringSecurity</mark> <mark>IntelliJ</mark> 
-          
-          editing
+
+          * Component별 단위 테스트 실행
+          * 타임리프 레이아웃 적용으로 공통 부분 Fragment화
+          * Mybatis Association, collection 을 이용 쿼리 갯수 감소, 1:N 관계의 테이블 쿼리 성능 개선
+          * jQuery, Ajax를 이용한 댓글, 무한스크롤 비동기 방식 처리
 
       - layout: top-left
         title: M2MShop
@@ -140,7 +146,13 @@ content:
         description: | # this will include new lines to allow paragraphs
           <mark>Java</mark> <mark>SpringMVC</mark> <mark>Mybatis</mark> <mark>Oracle11g</mark> <mark>JSP</mark> <mark>jQuery</mark> <mark>Eclipse</mark> 
 
-          editing
+          * 검색조건 유지 & 페이지 나누기 & ROWNUM 이용한 효율적인 Query
+          * JSP에 EL, JSTL 적용
+          * Spring, MyBatis 사용하여 Business Logic 구현 + JUnit
+          * AOP 적용, Transaction 처리하여 Business Logic 구현
+          * JSON 이용, RestFul Server-Client 구현
+          * jQuery Ajax 를 이용, JSON 형식으로 데이터 교환하며 비동기 통신
+          * Bootstrap 적용하여 반응형 UI 구현
 
       - layout: top-left
         title: STAPL
@@ -152,7 +164,9 @@ content:
         description: | # this will include new lines to allow paragraphs
           <mark>Java</mark> <mark>php</mark> <mark>MySQL</mark> <mark>TensorFlow</mark> <mark>VisualStudioCode</mark> <mark>AndroidStudio</mark>
 
-          editing 
+          * Frontend UX/UI 파트 담당
+          * 디자인 컨셉과 일관되고, 효율적 학습을 위한 UX/UI 개선
+          * 비동기 처리와 Splash page 애니메이션 기능 구현
           <br/><br/><br/>
 
   - title: Education # Title for the section
@@ -174,7 +188,7 @@ content:
         caption: 2015.03 - 2021.02
         description: | # this will include new lines to allow paragraphs
           융합 IT / 융합 디자인(복수전공) 학위 취득
-
+          * 알고리즘을 활용한 학교 주변 지역 관광지 네비게이션 개발 (수상)
           <br/><br/><br/>
 
   - title: A Little More About Me
