--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@react-three/rapier": "^1.5.0",
     "@types/react-dom": "^18.3.1",
     "astro": "4.16.10",
+    "bun": "^1.1.43",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
