main 페이지 맞춤

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@astrojs/tailwind": "5.1.2",
     "@nanostores/persistent": "^0.10.2",
     "@nanostores/react": "^0.8.0",
+    "@oven/bun-darwin-x64": "^1.1.43",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.2",
@@ -46,8 +47,7 @@
     "@react-three/postprocessing": "^2.16.3",
     "@react-three/rapier": "^1.5.0",
     "@types/react-dom": "^18.3.1",
-    "astro": "4.16.10",
-    "bun": "^1.1.43",
+    "astro": "^4.16.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
